Fixed width of intro-container on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,10 @@ body {
         display: none;
     }
 
+    .description {
+        max-width: 80vw;
+    }
+
     .bottom-menu {
         min-width: 100vw;
         text-align: center;
@@ -166,7 +170,7 @@ body {
         /*background-color: pink;*/
         align-items: center;
         max-height: none;
-        min-width: 100%;
+        min-width: 100vw;
         padding: 1em;
     }
 
@@ -190,6 +194,7 @@ body {
 
     .intro-container {
         min-height: auto;
+        width: calc(100% - 26px);
     }
 
     .description {
